<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2013 Andrew Okin
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ 	http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_title_location">
        <net.forkk.andcron.prefs.EditFloatPreference
                android:key="latitude"
                android:defaultValue="0.0"
                android:title="@string/pref_latitude_title"
                android:summary="@string/pref_latitude_summary"
                android:dialogTitle="@string/pref_latitude_dialog_title"
                />

        <net.forkk.andcron.prefs.EditFloatPreference
                android:key="longitude"
                android:defaultValue="0.0"
                android:title="@string/pref_longitude_title"
                android:summary="@string/pref_longitude_summary"
                android:dialogTitle="@string/pref_longitude_dialog_title"
                />

        <net.forkk.andcron.prefs.EditFloatPreference
                android:key="radius"
                android:defaultValue="5.0"
                android:title="@string/pref_radius_title"
                android:summary="@string/pref_radius_summary"
                android:dialogTitle="@string/pref_radius_dialog_title"
                />
    </PreferenceCategory>
</PreferenceScreen>
