<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2013 Andrew Okin
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ 	http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_title_ringer_modes_category">
        <ListPreference
                android:key="activate_mode"
                android:title="@string/pref_title_activate_mode"
                android:summary="@string/pref_summary_activate_mode"
                android:entries="@array/pref_ringer_mode_entry_titles"
                android:entryValues="@array/pref_ringer_entry_values"
                android:defaultValue="none"
                />

        <ListPreference
                android:key="deactivate_mode"
                android:title="@string/pref_title_deactivate_mode"
                android:summary="@string/pref_summary_deactivate_mode"
                android:entries="@array/pref_ringer_mode_entry_titles"
                android:entryValues="@array/pref_ringer_entry_values"
                android:defaultValue="none"
                />
    </PreferenceCategory>
</PreferenceScreen>
